increment routes, added search page, update header

--- a/frontend/bookstores-angular/src/app/views/header/user-bar/user-bar.component.html
+++ b/frontend/bookstores-angular/src/app/views/header/user-bar/user-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul class="navbar__list">
-    <li><a href="#" class="navbar__list__item">Área do Usuário</a></li>
-    <li><a href="#" class="navbar__list__item">Favoritos</a></li>
-    <li><a href="#" class="navbar__list__item">Carrinho</a></li>
+    <li><a href="/login" class="navbar__list__item">Login/Entrar</a></li>
+    <li><a href="/favorites" class="navbar__list__item">Favoritos</a></li>
+    <li><a href="/cart" class="navbar__list__item">Carrinho</a></li>
   </ul>
 </nav>
