--- a/frontend/bookstores-angular/src/app/shared/modules/chat/chat.component.html
+++ b/frontend/bookstores-angular/src/app/shared/modules/chat/chat.component.html
@@ -1,5 +1,13 @@
 <div class="chat">
-  <form>
+  <form [formGroup]="chatForm" (ngSubmit)="onSubmit()">
+    <div>
+      <h4>Olá, sou sua IA assistente da Books Store!</h4>
+      <p>Como posso te ajudar?</p>
+    </div>
 
+    <label for="mensagem">Mensagem:</label>
+    <textarea id="mensagem" formControlName="mensagem"></textarea>
+
+    <button type="submit">Enviar</button>
   </form>
 </div>
